# open-normative-eeg

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  aws-config.example.yaml  distribute.yaml  pyproject.toml  requirements-pinned.txt
docs/: RELEASE.md  adapting-for-new-experiments.md  aws-deployment-assessment.md  aws-deployment.md  combined_validation_report.md  comparison-report-display-spec.md  cw-normative-view-spec.md  design-spec.md  implementation-plan.md  normative-comparison-spec.md  normative-status.md  open-cloud-run.md  open-normative-engine-strategy.md  validation-journey.md
dortmund_qc/: age_distribution.json  channel_mapping.json  excluded_subjects.txt  pre_post_comparison.json  qc_counts.json  qc_summary.md  ready_subjects.txt  session2_subjects.txt
open_cloud_run/: __init__.py  __main__.py  cli.py  config.py  download.py  enumerate.py  list_runs.py  logs.py  manifest.py  status.py  submit.py
open_normative/: __init__.py  channels.py  compare.py  connectivity.py  io.py  normative.py  parameters.py  pipeline.py  preprocessing.py  release.py  reliability.py  source.py  spectral.py
scripts/: batch_entrypoint.sh  build_ba_labels.py  build_dk_labels.py  build_norms.py  build_participants_tsv.py  cloud_recompute.py  compare_recording.py  compute_trt_reliability.py  depress_download.py  distribute.py  distribution_report.py  dortmund_download.py  generate_validation_report.py  hbn_download.py  hbn_qc.py  lemon_download.py  lemon_qc.py  mirror_dataset_ec2.sh  release.py  release.sh  srm_download.py  trt_download.py  validate_cross_dataset.py  validate_internal.py  validate_literature.py  validate_source.py  visualize_norms.py
tests/: conftest.py  test_channels.py  test_checkpoint_sync.py  test_compare.py  test_compare_sex.py  test_connectivity.py  test_determinism.py  test_distribution_report.py  test_end_to_end_smoke.py  test_normative.py  test_npz_node_strength_routing.py  test_npz_roi_order_metadata.py  test_npz_sex_roundtrip.py  test_open_cloud_run.py  test_parameters.py  (+11 more)
(+653 files in other folders)
