[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "open-normative-eeg"
version = "0.1.0"
description = "Open normative EEG database builder with clinical-grade processing pipeline"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.10"
dependencies = [
    "mne>=1.6",
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "specparam",
    "mne-icalabel>=0.4",
    "mne-connectivity>=0.5",
    "python-picard>=0.7",
    "asrpy>=0.0.2",
    "networkx>=3.0",
    "onnxruntime>=1.16",
]

[project.optional-dependencies]
datasets = [
    "requests",
    "tqdm",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.hatch.build.targets.wheel]
packages = ["open_normative"]

[tool.pytest.ini_options]
testpaths = ["tests"]
